--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,9 @@
 @import './styles.css/search.css'; 
 @import './styles.css/footer.css'; 
 @import './styles.css/itemList.css'; 
+@import './styles.css/category.css'; 
+@import './styles.css/order.css'; 
+
 
 :root {
   --royal-blue: #2766cc;
@@ -207,50 +210,6 @@ hr {
 }
 
 
-/* catergory */
-.categories {
-  cursor: pointer;
-  font-weight: 700;
-}
-.active {
-  border-right: 4px solid var(--royal-blue);
-  color: var(--royal-blue);  
-}
-.category {
-  color: var(--darkgray);
-}
-
-
-/* accountRoot */
-.all-orders {
-  padding-left: 4rem;
-  border-top-right-radius: 15px;
-  border-bottom-right-radius: 15px;
-}
-.phoneNunber {
-  font-size: 20px;
-  padding-top: 0;
-}
-.all-orders .show{
-  padding-left: -2rem  !important;
-  font-size: 20px;
-  font-weight: 700;
-  color: var(--darkslategray);
-}
-.grid-container {
-  margin-bottom: 15rem;
-  border-radius: 5rem;
-}
-.order, .price {
-  padding-top: 15px;
-  line-height: 10px;
-  font-size: 12px;
-  font-weight: 500;
-}
-.details {
-  border-top-left-radius: 15px;
-  border-bottom-left-radius: 15px;
-}
 
 /* bag */
 .B-payment {
