--- a/src/App.css
+++ b/src/App.css
@@ -209,7 +209,11 @@ hr {
   text-decoration: line-through;
 }
 
-
+/* sliderone */
+  .sliderone {
+    width: 100%;
+    object-fit: contain;
+  }
 
 /* bag */
 .B-payment {
@@ -281,10 +285,22 @@ textarea {
   font-size: 20px;
 }
 
+.active {
+  background-color: #caced6;
+  padding: 8px 20px;
+  color: var(--royal-blue);  
+  border-radius: 20px;
+}
+
 /* mobile view */
 @media(max-width: 767px) {
 .category-sidebar, .main-items {
   border: none !important;
+}
+
+.mobile-active {
+  border-top: 4px solid var(--royal-blue);
+  color: var(--royal-blue) !important;  
 }
 
 #desktop-category, #bag-sidebar, #deskstop-global-header, #desktop-itemlist {
