--- a/src/styles.css/category.css
+++ b/src/styles.css/category.css
@@ -3,7 +3,7 @@
     cursor: pointer;
     font-weight: 700;
   }
-  .active {
+  .category-active {
     border-right: 4px solid var(--royal-blue);
     color: var(--royal-blue);  
   }
@@ -50,3 +50,4 @@
   .allCategories {
       margin-bottom: 6rem;
   }
+  
