--- a/src/styles.css/footer.css
+++ b/src/styles.css/footer.css
@@ -51,9 +51,17 @@
       .mobile-footer-icon {
           cursor: pointer;
           font-size: 3rem !important;
+          color: var(--darkgray);
       }
-      .mobile-footer .active {
+      .mobile-footer-icon .active {
+        color: var(--royal-blue);
+      }
+
+      .mobile-footer p{
+        color: var(--darkgray);
+      }
+      /* .mobile-footer .active {
         border-top: 4px solid var(--royal-blue);
         color: var(--royal-blue);  
-      }
+      } */
   }
