--- a/src/styles.css/itemList.css
+++ b/src/styles.css/itemList.css
@@ -2,14 +2,10 @@
 .item-data {
     text-decoration: none;
   }
-  .image{
-    width: 100%;
-    text-align: center;
-    background-color: var(--lavender);
-  }
+  
   .image img {
     width: 100%;
-    height: 10rem;
+    /* height: 10rem; */
     object-fit: contain;
   
   }
@@ -21,4 +17,11 @@
   .item-details {
     width: 88px;
     margin-bottom: 2rem;
+  }
+
+  @media(max-width: 767px){
+    /* .item-details {
+      display: flex;
+      justify-content: space-between !important;
+    } */
   }
