added active class to mobile-footer link

--- a/src/App.css
+++ b/src/App.css
@@ -298,7 +298,7 @@ textarea {
   border: none !important;
 }
 
-.mobile-active {
+.is-active {
   border-top: 4px solid var(--royal-blue);
   color: var(--royal-blue) !important;  
 }
